style: lower the width of the recipe image to 400px

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Ground Turkey Pasta</h1>
-        <img src="../images/ground-turkey-pasta.webp">
+        <img src="../images/ground-turkey-pasta.webp" width="400">
     <h2>Description</h2>
         <p>This is a quick and easy one-pot main dish meal. Substitute your favorite ground meat, broth, spices, and pasta shape. For those who want an easy meal or those beginning to cook - this is for you.</p>
     <h2>Ingredients</h2>
