feat(recipe): add irish sausage and potato stew

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Best Recipes</title>
 </head>
 <body>
+    <h1>Best Recipes</h1>
     <a href="recipes/pasta.html">Ground Turkey Pasta</a>
 </body>
 </html>
