--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Best Recipes</h1>
-    <a href="recipes/pasta.html">Ground Turkey Pasta</a>
+
+    <ul>
+        <li><a href="recipes/pasta.html">Ground Turkey Pasta</a></li><br>
+        <li><a href="recipes/coddle.html">Irish Sausage and Potato Stew</a></li> 
+    </ul>
 </body>
 </html>
