feat: add a back-to-all-recipe link to each recipe

--- a/recipes/coddle.html
+++ b/recipes/coddle.html
@@ -42,5 +42,7 @@
             <li>Cover and place pot into the preheated oven. Cook for about 2 1/2 hours. Remove the lid, and continue cooking uncovered for about 1 more hour.</li>
             <li>Remove from oven and skim excess fat from top before serving. Garnish top with green onions, if desired.</li>
         </ol>
+
+        <a href="../index.html">Back to all recipes</a>
 </body>
 </html>
