--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -33,5 +33,7 @@
             <li>Pour in pasta sauce and broth, making sure pasta is completely covered. Bring to a boil, reduce heat, cover, and cook until pasta is tender yet firm to the bite, 7 to 10 minutes.</li>
             <li>Top with Parmesan cheese.</li>
         </ol>
+    
+        <a href="../index.html">Back to all recipes</a>
 </body>
 </html>
